<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.rentisha.viewmodels.RentishaViewModel" />
        <variable
            name="loginFragment"
            type="com.example.rentisha.ui.LoginFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- TODO: Update blank fragment layout -->
            <ImageView
                android:id="@+id/rentishaLogo"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:text="@string/hello_blank_fragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rentishalogo"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textColor="@color/green"
                android:text="@string/welcome"
                android:textSize="28sp"
                style="@style/Widget.Rentisha.Textview"
                app:layout_constraintTop_toBottomOf="@id/rentishaLogo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/Login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:onClick="@{()-> loginFragment.goToNextScreen()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordText" />

            <TextView
                android:id="@+id/registerAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Become_a_member"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/green"
                android:onClick="@{()-> loginFragment.goToRegistrationScreen()}"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/login_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
